# odin_allegro

./: .gitignore  CMakeLists.txt  README.md  bindgen.sjson  build_allegro.sh  imports.odin
allegro/: alcompat.odin  allegro.odin  allegro_acodec.odin  allegro_audio.odin  allegro_color.odin  allegro_font.odin  allegro_image.odin  allegro_memfile.odin  allegro_opengl.odin  allegro_physfs.odin  allegro_primitives.odin  allegro_ttf.odin  allegro_x.odin  altime.odin  base.odin  bitmap.odin  bitmap_draw.odin  bitmap_io.odin  bitmap_lock.odin  blender.odin  clipboard.odin  color.odin  config.odin  cpu.odin  debug.odin  display.odin  error.odin  events.odin  file.odin  fixed.odin  fmaths.odin  fshook.odin  fullscreen_mode.odin  haptic.odin  joystick.odin  keyboard.odin  keycodes.odin  memory.odin  monitor.odin  mouse.odin  (+10 more)
